2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/RspConnection.cpp (RspConnection): Initialize mPendingBreak.
	(RspConnection::getPkt): Set mPendingBreak if a 0x03 is seen.
	(RspConnection::getBreakCommand): Return true if we have a pending
	break.
	* src/RspConnection.h (RspConnection) <mPendingBreak>: New field.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspVCont): Check for Ctrl-C
	requests before handling thread stops.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/RspConnection.cpp (RspConnection::inputReady): New method.
	(RspConnection::getBreakCommand): Use it instead of setting the
	sock non-blocking temporarily.
	* src/RspConnection.h (RspConnection) <inputReady>: New method.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspSuspend): Report
	TARGET_SIGNAL_INT instead of TARGET_SIGNAL_HUP.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspReportException): Set the
	current thread to the thread whose stop is being reported.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspAttach): Call markAllStopped.
	(GdbServer::rspReportException): Call markPendingStops.
	(GdbServer::rspSuspend): Remove parameter.  Instead fetch the
	thread's last action from the thread object directly.
	(GdbServer::rspSuspend): Call markAllStopped.
	(GdbServer::rspVCont): Get a thread's last action and pending
	status from the thread object directly.
	(GdbServer::pendingStop): Delete.
	(GdbServer::markPendingStops): Remove ProcessInfo pointer
	parameter.  Always work with the current process.  Get/set a
	thread's last action and pending status from/in the thread object
	directly.
	(GdbServer::removePendingStop): Delete.
	(GdbServer::markAllStopped): New method.
	(GdbServer::doContinue): Mark all threads stopped.
	(GdbServer::resumeAllThreads): Skip continued threads with a
	pending status.